--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build with Maven
-        run: ./mvnw verify
+#      - name: Build with Maven
+#        run: ./mvnw verify
 
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
