--- a/bookmarker-api/src/main/resources/application.properties
+++ b/bookmarker-api/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.flyway.locations=classpath:/db/migration/{vendor}
